Добавлена ручка для получения аэропортов. Исправление багов
